# MPTC

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: Doxyfile
examples/esp32_demo/: platformio.ini
examples/esp32_demo/src/: main.cpp
examples/pc/: pc_benchmark.c
include/mptc/: bitonic.h  integral_img.h  mptc.h  mptc_config.h  mptc_types.h  sdft.h  sintmath.h  ternary.h  triple_pll.h
src/: integral_img.c  mptc.c  sdft.c
tests/: test_basic.c
